# py-project-utils

./: README.md  build.sh  dev-requirements.txt  install-dependencies.sh  pyproject.toml  requirements.txt
src/py_project_utils_xethhung12/: __init__.py  __main__.py  _module_project_creation.py
src/py_project_utils_xethhung12/_cmd/: run.py
src/py_project_utils_xethhung12/cmd/: run.py
src/py_project_utils_xethhung12/data/: .gitignore  README.md  install-dependencies.sh  pyproject.toml  requirements.txt  src$___project_name___$__init__.py  src$___project_name___$__main__.py  src$___project_name___$_cmd$run.py  src$___project_name___$cmd$run.py
