[build-system]
requires = [ "hatchling >= 1.26",]
build-backend = "hatchling.build"

[project]
name = "py_project_utils_xethhung12"
version = "0.0.4"
description = "A small package targeting to help on python project packaging process"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
license = "GPL-3.0-only"
license-files = [ "LICEN[CS]E*",]
[[project.authors]]
name = "Xeth Hung"
email = "admin@xethh.me"

[project.urls]
Homepage = "https://github.com/xh-dev-py/py-project-utils"
Issues = "https://github.com/xh-dev-py/py-project-utils/issues"

[project.scripts]
py-project-utils = "py_project_utils_xethhung12.cmd.run:main"

[tool.hatch.build.targets.wheel]
packages = [ "src/py_project_utils_xethhung12",]
